# command4bot

./: .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  style.yml  test.yml
command4bot/: __init__.py  command.py  context.py  fallback.py  manager.py  setup.py  typing_ext.py  utils.py
commandbot/: __init__.py
docs/source/: api.rst  conf.py  configuration.rst  index.rst  start.rst  status.rst
tests/: conftest.py  test_basic.py  test_case_sensitivity.py  test_command.py  test_concurrency.py  test_context.py  test_error_handling.py  test_fallback.py  test_group.py  test_method_handler.py  test_open_close.py  test_setup.py  test_status.py  test_status_diff.py
