[tool.poetry]
name = "command4bot"
version = "0.1.0"
description = "A general purpose library for command-based iteraction made for bots"
authors = ["Allan Chain <allanchain@pku.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pre-commit = "^2.8.2"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
