[tool.poetry]
name = "command4bot"
version = "v0.1.2"
description = "A general purpose library for command-based iteraction made for bots"
authors = ["Allan Chain <allanchain@pku.edu.cn>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/AllanChain/command4bot"
repository = "https://github.com/AllanChain/command4bot"
documentation = "https://github.com/AllanChain/command4bot#readme"

keywords = ["command", "bot"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6.1"
typing_extensions = {version = "^3.7.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79

[tool.coverage.run]
branch = true
source = ["command4bot"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "except ImportError:",
    "..."
]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
